Fixed navbar and body spacing issues
#1

--- a/css/bootstrap-cosmo.no-icons.css
+++ b/css/bootstrap-cosmo.no-icons.css
@@ -208,7 +208,7 @@ body {
   margin: 0;
   color: #555555;
   background-color: #ffffff;
-  padding: 40px;
+  padding-top: 40px;
   font-family: "Open Sans", Calibri, Candara, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
@@ -5182,7 +5182,7 @@ a.thumbnail:hover {
 }
 .footer a {
   color: #000000;
-  margin-right: 8px;
+  padding-right: 8px;
 }
 .footer a:hover {
   color: #bbbbbb;
